phase5-1/infrastructure/alb.tf
#================================================
# ALB
#================================================
resource "aws_lb" "handson" {
  name               = "handson-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = [aws_subnet.public_a.id, aws_subnet.public_b.id]

  tags = {
    Name = "handson-alb"
  }
}

#================================================
# Target Group
#================================================
resource "aws_lb_target_group" "handson" {
  name     = "handson-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.handson.id

  health_check {
    path = "/"
  }

  tags = {
    Name = "handson-tg"
  }
}

#================================================
# Listener
#================================================
resource "aws_lb_listener" "handson" {
  load_balancer_arn = aws_lb.handson.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.handson.arn
  }
}

#================================================
# Target Group Attachment
#================================================
resource "aws_lb_target_group_attachment" "web_a" {
  target_group_arn = aws_lb_target_group.handson.arn
  target_id        = aws_instance.web_a.id
  port             = 80
}

resource "aws_lb_target_group_attachment" "web_b" {
  target_group_arn = aws_lb_target_group.handson.arn
  target_id        = aws_instance.web_b.id
  port             = 80
}
